[package]
name = "dtui"
version = "0.1.0"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
tokio = { version = "0.2", features = ["time", "dns"] }
cursive = { version = "0.15.0", default-features = false, features = ["crossterm-backend"] }
deluge-rpc = { git = "https://github.com/The0x539/rust-deluge-rpc.git", branch = "trunk" }
bytesize = "1.0.1"
cursive-tabs = "*"
cursive_buffered_backend = "0.4.0"
futures = "*"
fnv = "1.0.7"
ryu = "1.0.4"
async-trait = "0.1.31"
epochs = "0.2.4"
static_assertions = "1.1.0"
uuid = { version = "0.8.1", features = ["v4"] }

[patch.crates-io]
deluge-rpc-macro = { git = "https://github.com/The0x539/deluge-macro.git", branch = "trunk" }
cursive-tabs = { path = "experiment/cursive-tabs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
